# gialaitravel-ai-service-v2

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  main.py  pyproject.toml  restful-api.en.md  restful-api.md
.github/workflows/: ci-cd.yml
docs/: backend-rest-api.md  implementation_plan.md  service_integration_guide.md  travel_agent_pipeline.html
src/: main.py
src/application/: guardrails.py  interfaces.py  use_cases.py
src/application/graph/: pipeline.py  state.py
src/application/graph/nodes/: cold_start.py  critic.py  elicitation.py  finalize.py  llm_planner.py  planner.py  qdrant_search.py  reflection.py  route_optimizer.py  router.py
src/application/services/: distance.py  itinerary_service.py  realtime_search.py
src/core/: config.py  logging.py
src/domain/: entities.py  itinerary.py  working_memory.py
src/infrastructure/: database.py  models.py  qdrant_repo.py  repositories.py  session_store.py  vector_db.py
src/presentation/: dependencies.py  schemas.py  schemas_itinerary.py  schemas_ws.py
src/presentation/api/: items.py  itineraries.py
src/presentation/ws/: chat.py
tests/: check_methods.py  check_qdrant.py  test_client.html  test_guardrails_and_route_optimizer.py  test_langsmith.py  test_search.py
