[project]
name = "gialaitravel-ai-service-v2"
version = "0.1.0"
description = "FastAPI Clean Architecture AI Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.30",
    "qdrant-client>=1.8.0",
    "langchain-qdrant>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "websockets>=12.0",
    "loguru>=0.7.2",
    "langsmith>=0.1.0",
    "google-genai>=2.7.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
